# qurrium_pqp

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
qurrium_pqp/: __init__.py  bitwise.py  boorust.pyi  classical_shadow.py  qurries.py  utils.py
qurrium_pqp/process/: __init__.py
qurrium_pqp/process/classical_shadow/: __init__.py  complex.py  container_kind.py  trace.py
qurrium_pqp/process/classical_shadow/all_observable/: __init__.py  complex.py  container_kind.py  trace.py
qurrium_pqp/process/classical_shadow/trace_process/: bitwise.py  trace_core.py
qurrium_pqp/process/trace_process/: __init__.py  trace_core.py
qurrium_pqp/qurries/: __init__.py  conversion.py
qurrium_pqp/qurries/classical_shadow_more/: __init__.py  analysis.py  arguments.py  experiment.py  qurry.py
src/: lib.rs
tests/: README.md  conftest.py
tests/process/: __init__.py  test_shadow_purity.py  utilities.py
tests/process/dummy_data/: shadow_purity.json
tests/qurrium/: __init__.py  test_shadow_purity.py
tests/qurrium/utilities/: __init__.py  circuits.py  other.py  random_basis.json  random_stuff.py  random_unitary_seeds.json  simulator.py
