[package]
name = "qurrium_pqp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qurrium_pqp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.0", features = ["abi3-py310"] }
rayon = "1.11.0"
indicatif = { version = "0.17", features = ["rayon"] }
